# utdee

./: .dockerignore  .env_template  .gitignore  README.md  compose.yaml  pyproject.toml
git_hooks/: pre-commit  utils.py
git_hooks/tests/: utils.py
services/backend/: main.py  pyproject.toml
services/mongo/: mongo-init.js
